Updated by task 'AUTO_TM_MT_1743103527864'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/19fa5a41a984c3f68691674fe3524930925325a1

--- a/c-legacy-releases/2022/03232022.md
+++ b/c-legacy-releases/2022/03232022.md
@@ -6,10 +6,10 @@ last-update: March 2022
 author: mfrei
 mini-toc-levels: 1
 exl-id: 035ca8c5-f408-4f75-ba32-10b49d0cc78a
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '4840'
-ht-degree: 98%
+source-wordcount: '4373'
+ht-degree: 97%
 
 ---
 
@@ -25,7 +25,6 @@ ht-degree: 98%
 
 上次更新日期：**2022 年 4 月 13 日**
 
-* [[!DNL Experience League] 事件](#events) (**4月13日**)
 * [[!DNL Adobe System Status]](#status)
 * [Experience Cloud - 中央介面元件和管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -46,25 +45,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
-
-## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
-
-若要向 Adobe 產品專家學習、與之互動或獲得解答，Experience League 活動是您絕佳的選擇！
-
-更新日期：**2022 年 4 月 5 日**
-
-| 活動 | 類型 | 說明 |
-| -----------|---------- | ----|
-| [從AEM頭到無頭（以及中間的一切）](https://www.youtube.com/watch?v=idByz7WrhbQ) | Experience League LIVE | 觀看主持人Danny Gordon和來賓Amol Anand、Sachin Mali和Sean Steimer在Adobe Experience Manager Sites實施的最常見情況的詳細細節。 <br>**日期：** 2022年4月21日太平洋標準時間上午9點<br>[計畫和過去事件](https://experienceleague.adobe.com/docs/experience-league-live-events/events/overview.html) |
-| [我如何處理這些客群？](https://www.youtube.com/watch?v=I8HKFkx16-E) | Experience League LIVE | 使用 Audience Manager 和 Real-Time CDP 揭開受眾策略的神秘面紗。主持人道格摩爾在這次Experience League現場直播活動中歡迎尼克坎穆索和傑基切瓦利耶。<br>**日期：** 2022年4月28日<br>[計畫和過去事件](https://experienceleague.adobe.com/docs/experience-league-live-events/events/overview.html) |
-| [AEM Gems](https://experienceleague.adobe.com/docs/experience-manager-gems-events/gems/overview.html) | Adobe Live 網路研討會 | 2022AEM年的Gems更新可用！ Gems是AEM我們在Adobe Experience Manager的網路研討會系列深度技術潛水，由Adobe專家提供。 <br>有關最新的AEMGems，請參閱 [Adobe Experience Manager as a Cloud Service:《2021年回顧及2022年展望》](https://experienceleague.adobe.com/docs/experience-manager-gems-events/gems/gems2022/aemcloudservice-2021-review-and-outlook.html) 和 [使用無頭和App AEM Builder更快地構建站點](https://experienceleague.adobe.com/docs/experience-manager-gems-events/gems/gems2022/build-sites-faster-with-headless-and-appbuilder.html)。<br>請經常瀏覽這些版本注意事項或訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)，以隨時掌握 AEM Gems 和其他 Experience League 活動的最新消息。 |
-| [Experience Makers - Adobe Workfront 技能交流](https://events.bizzabo.com/385867?promo=CustomerM&amp;tr=true) | Adobe Live 網路研討會 | 我們很高興發布即將推出 _Experience Makers - The Skill Exchange for Adobe Workfront_ 第一版。 <br>這次免費的三小時數字學習活動完全集中在Workfront。 您可以向最了解工作管理的專家和同行提出問題。無論您是 Workfront 的新手還是經驗豐富的專家，我們都為每個人備妥合適的內容。<br>**日期：** 4 月 13 日星期三，上午 9點 - 中午12:00 PDT。[詳情和報名](https://events.bizzabo.com/385867?promo=CustomerM&amp;tr=true)：Adobe 建議您即便無法參加還是要報名，以便之後可以保證獲得隨選錄影的存取權。 |
-| [Adobe Workfront System Admin Essentials：設計理想的使用者體驗](https://webinars.on24.com/adobe_workfront/AdminEssentialsUserExp?partnerref=field) | Adobe Live 網路研討會 | 與Adobe Workfront公司客戶成功經理Mary Ann Erickson和Liberty Mutual Insurance公司創意運營分析師Steve Enos一起探討如何設計理想的用戶體驗。 <br>**日期：** 4月27日，星期三。 時間：英國早上8:00點/下午4:00點。 <br>[詳細資訊和註冊](https://webinars.on24.com/adobe_workfront/AdminEssentialsUserExp?partnerref=field) |
-| [Adobe Analytics：使用資料訴說有影響力的故事](https://engage.adobe.com/adobe-analytics-telling-impactful-stories.html?s_rtid=7015Y0%5b%E2%80%A6%5d15Y000003A5SbQAK&amp;sfid=&amp;acctid=&amp;ecp=&amp;sdid=JCNCWJFP&amp;mv=display) | Adobe Live 網路研討會 | 藝術和科學完美融合之時，即可用資料完美地述說故事。因此，為何要過度設計？Adobe Analytics 達人 Amy Ard 探討旨在指引您用資料述說故事，而又不會減損創意的三大部分：<ul><li>識別商機或問題</li><li>透過資料解說</li><li>提供解決方案</li></ul>**日期：** 2022 年 3 月 31 日星期四 - [詳情和註冊](https://engage.adobe.com/adobe-analytics-telling-impactful-stories.html?s_rtid=7015Y0%5b…%5d15Y000003A5SbQAK&amp;sfid=&amp;acctid=&amp;ecp=&amp;sdid=JCNCWJFP&amp;mv=display) |
-| [Adobe [!DNL Developers Live]](https://experienceleague.adobe.com/docs/adobe-developers-live-events/events/2021/oct2021/overview.html) | 影片 | [!DNL Developers Live] 會展示最新的技術進展和開發人員工具，藉以促進各產業的設計、內容創作工作流程、文件服務和客戶體驗管理。觀看專題演講、了解 Analytics API、客戶資料層、Adobe Developer 開放原始碼專案等內容。 |
-
-{style="table-layout:auto"}
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
@@ -169,9 +150,9 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 ### Experience Manager 產品更新
 
-* **Experience Manager 6.5，Service Pack 12 (6.5.12.0)**
+* **Experience Manager 6.5， Service Pack 12 (6.5.12.0)**
 
-  Adobe Experience Manager 6.5.12.0 包括自 2019 年 4 月 6.5 版發行以來所推出的新功能、客戶要求的重要增強功能，以及效能、穩定性和安全性的改善項目。Service Pack 安裝於的 Adobe Experience Manager 6.5。
+  Adobe Experience Manager 6.5.12.0包含自2019年4月6.5版發行以來所推出的新功能、客戶要求的重要增強功能，以及效能、穩定性和安全性改善專案。 Service Pack 安裝於的 Adobe Experience Manager 6.5。
 
   請參閱[發行說明](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/release-notes.html)。
 
