--- a/c-legacy-releases/2022/08172022.md
+++ b/c-legacy-releases/2022/08172022.md
@@ -6,9 +6,9 @@ last-update: August 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: fc05d05d-1398-45e4-b40d-388875ff89e4
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '3241'
+source-wordcount: '3106'
 ht-degree: 99%
 
 ---
@@ -25,7 +25,6 @@ ht-degree: 99%
 
 上次更新日期：**2022 年 8 月 23 日**
 
-* [[!DNL Experience League] 活動](#events)
 * [[!DNL Adobe System Status]](#status)
 * [Experience Cloud - 中央介面元件和管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -47,22 +46,7 @@ ht-degree: 99%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
-
-## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
-
-若要向 Adobe 產品專家學習、與之互動或獲得解答，Experience League 活動是您絕佳的選擇！請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)，以掌握 2022 年 7 月活動的最新消息。
-
-**2022 年 8 月 10 日**&#x200B;更新
-
-| 活動 | 類型 | 說明 |
-| -----------|---------- | ----|
-| [Adobe Analytics](https://engage.adobe.com/NA_FY22_Q3_WBR_Adobe_Analytics_Data_Validation.html) | 網路研討會 | _加速明日成功：資料品質和採用_ - 在這場直播網路研討會中加入 Adobe Analytics Champions Frederik Werner 和 Sarah Owen 的行列，瞭解如何將資料品質融入每個分析成面並打造分享文化。<p>**日期：** 8 月 25 日上午 11 點 (太平洋標準時間) - [詳細資料和報名](https://engage.adobe.com/NA_FY22_Q3_WBR_Adobe_Analytics_Data_Validation.html) |
-| [Experience Makers Live](https://business.adobe.com/events/experience-makers-live.html) | 網路研討會 | 免費的 Experience Makers 活動，將由 Sara Blakely、Peyton Manning 和 Eli Manning 進行專題演講。<p>**日期：** 9 月 13 日至 14 日 - [詳細資料和報名](https://business.adobe.com/events/experience-makers-live.html) |
-
-{style="table-layout:auto"}
-
-請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)，以掌握即將舉辦的活動和過去集數的最新消息。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
