--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -6,10 +6,10 @@ last-update: September 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: d195f05f-454f-4ef0-ba30-0453868fe426
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '5039'
-ht-degree: 99%
+source-wordcount: '5038'
+ht-degree: 98%
 
 ---
 
@@ -211,7 +211,7 @@ _發行前管道中可用的新功能_
 
 * **在最適化表單中使用 Adobe Sign 角色** - 適用於商業和企業服務等級的 Adobe Sign 可選擇擴充協議收件者的角色，而不只是簽署者，以便更符合其工作流程需求。您現在可以[啟用每個協議收件者，以便在最適化表單中設定其角色](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-an-adaptive-form/use-adobe-sign/working-with-adobe-sign.html#addsignerstoanadaptiveform)，並將簽署者設定為預設角色。
 * **Analytics for Adaptive Forms** - 您現在可以透過 Adobe Analytics for Adaptive Forms 擷取及追蹤一般使用者行為，以收集一般使用者的深入解析。它可幫助您根據資料來進行明智的決策，以改善一般使用者體驗。
-* **將 Experience Manager Forms 與 Microsoft® Dynamics 和 Salesforce.com 輕鬆連接** - 該服務為 Microsoft® Dynamics 和 [Salesforce.com](https://www.salesforce.com/?bc=DF) 提供現成的資料來源配置和資料模型。可功能可讓[開發人員更快且更輕鬆地設定 Microsoft® Dynamics 和 Salesforce Cloud Service 的最適化表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/use-form-data-model/configure-msdynamics-salesforce.html)。
+* **將 Experience Manager Forms 與 Microsoft® Dynamics 和 Salesforce.com 輕鬆連接** - 該服務為 Microsoft® Dynamics 和 [Salesforce.com](https://www.salesforce.com/?bc=DF) 提供現成的資料來源配置和資料模型。可功能可讓開發人員更快且更輕鬆地設定Microsoft®Dynamics 365和Salesforce雲端服務的最適化表單。
 
 ### Experience Manager Screens as a Cloud Service
 
