--- a/c-legacy-releases/2022/10282022.md
+++ b/c-legacy-releases/2022/10282022.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: November 2022
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '3954'
-ht-degree: 97%
+source-wordcount: '3769'
+ht-degree: 98%
 
 ---
 
@@ -26,7 +26,6 @@ ht-degree: 97%
 
 上次更新日期：**2022 年 1 月 6 日**
 
-* [[!DNL Experience League] 活動](#events) (更新於 **1 月 6 日**)
 * [[!DNL Adobe System Status]](#status)
 * [Experience Cloud - 中央介面元件和管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -48,20 +47,7 @@ ht-degree: 97%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
-
-## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
-
-若要向 Adobe 產品專家學習、與之互動或獲得解答，Experience League 活動是您絕佳的選擇！
-
-即將到來的活動：
-
-* [管理員閒談：行銷和創意](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,rt0Knsqbf0qXnCBbrsMKsQ,dwwihmlWl0aM4Se6G4bXTQ,_C3JizOF1USDb_UKZOC2rg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) - **1 月 6 日** - _此互動式會議旨在將您和其他管理員連接在一起，並討論最佳做法和提示與秘訣以協助您和您的使用者充分利用 [!DNL Workfront]。_
-* [CS Connections：共用策略性最佳做法](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,Kn3p9Ut9vkCcycuFzBOJ4Q,5uLGVo1-uUS0_PY7S6QjmQ,vwcqrDXgIUyCK-lPjko8zA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) - **1 月 9 日** - _正在尋找與其他客戶聯繫並討論 [!DNL Workfront] 功能的機會嗎？加入我們的 CS Connections 系列！每月有機會與其他客戶聯絡，討論您組織的熱門話題。_
-* [ [!DNL Adobe Workfront] 23.1](https://webinars.on24.com/adobe_workfront/whatsnewin231?partnerref=EXL) 的新增功能 - **1 月 10 日** - _加入 [!DNL Adobe Workfront] 產品團隊以進一步了解我們在最新版本中即將推出的功能和增強功能。_
-* [適用於內部部署和 AMS 環境的 AEM 最佳做法分析工具](https://aem-augs.adobe.com/events/details/adobe-experience-manager-aem-learning-chapter-presents-aem-gems-aem-best-practices-analyzer-for-on-premise-ams-environments/) - **1 月 18 日** - _了解 Adobe Experience Manager 最佳做法分析工具，該工具提供有關 AEM 內部部署和 AMS 執行個體的分析和報告功能。請注意，這不適用於 AEM as a Cloud Service。_
-
-如需完整的活動時間表，請參閱 [Experience League 上的活動](https://experienceleague.adobe.com/events/)。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
