--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -6,9 +6,9 @@ last-update: June 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 8f612076-fc5e-4a83-9195-f7f0647d279d
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '4968'
+source-wordcount: '4930'
 ht-degree: 99%
 
 ---
@@ -112,7 +112,7 @@ ht-degree: 99%
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -530,7 +530,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -776,6 +776,3 @@ See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com
 
 [數位體驗藍圖教學課程](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html)是可重複實施的內容，可讓您找出處理策略並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實施步驟、技術考量以及相關文件的連結。
 
-| 發佈日期 | 名稱 | 類型 | 說明 |
-| -----------| ---------- | ---------- | ---------- |
-| 2023 年 6 月 | [多沙箱事件轉發資料收集](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/data-ingestion/multi-sandbox-event-forwarding.html) | 藍圖教學課程 | 了解如何將使用 Experience Platform Web 和行動 SDK 收集的資料設定為收集單一事件並轉發到多個 AEP 沙箱。 |
