--- a/c-legacy-releases/2022/06152022.md
+++ b/c-legacy-releases/2022/06152022.md
@@ -6,9 +6,9 @@ last-update: June 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: bcc6313b-e6c0-4916-b1b9-cf3002851caf
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '3433'
+source-wordcount: '3402'
 ht-degree: 98%
 
 ---
@@ -25,7 +25,6 @@ ht-degree: 98%
 
 最近更新日期：**2022 年 6 月 28 日**
 
-* [[!DNL Experience League] 活動](#events)
 * [[!DNL Adobe System Status]](#status)
 * [Experience Cloud - 中央介面元件和管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -47,13 +46,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
-
-## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
-
-若想學習、互動和了解 Adobe 產品專家的答案，[Experience League 活動](https://experienceleague.adobe.com/events/)會是個好選擇！
-
-請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)以了解最新資訊。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
@@ -87,7 +80,7 @@ Experience Cloud [中央介面元件](https://experienceleague.adobe.com/docs/co
 
 預計發行日期：**2022 年 6 月 22 日**
 
-* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html)
+* [Experience Platform 發行說明](https://experienceleague.adobe.com/docs/experience-platform/release-notes/latest.html?lang=zh-Hant)
 
 ### 新 [!DNL Experience Platform] 教學課程和其他課程 {#tutorials-platform}
 
