--- a/c-legacy-releases/2022/10052022.md
+++ b/c-legacy-releases/2022/10052022.md
@@ -6,9 +6,9 @@ last-update: October 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: 63424213-0589-47ea-865f-47ba17e97b85
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '5256'
+source-wordcount: '4965'
 ht-degree: 98%
 
 ---
@@ -27,7 +27,6 @@ ht-degree: 98%
 
 最近更新日期：**2022 年 10 月 14 日**
 
-* [[!DNL Experience League] 活動](#events)
 * [[!DNL Adobe System Status]](#status)
 * [Experience Cloud - 中央介面元件和管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -49,22 +48,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
-
-## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
-
-若要向 Adobe 產品專家學習、與之互動或獲得解答，Experience League 活動是您絕佳的選擇！請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)，以掌握 2022 年 10 月的最新消息。
-
-| 產品/事件名稱 | 類型 | 說明 |
-| -----------|---------- | ----|
-| **[!DNL Adobe Workfront]** | 工作坊 | _價值實現系列：為您的 Workfront 歷程制定藍圖_ - Workfront 歷程的下一步是什麼？加入我們，討論如何在您的組織中為 Adobe Workfront 建立自己的藍圖。取得有關我們最愛的里程碑的想法以將其加入您的藍圖中，並了解我們身為前系統管理員的經驗。<p>**10 月 4 日下午 12:30 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,Bx3LyyABjkC6f0LfiHlHgw,F_Tenijn5UulPjqprok8eg,7lni6LpvlEWagR1OIDfosA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _CS Connections：分享策略最佳實務_ - 正在尋找與其他客戶聯繫並討論 Workfront 功能的機會嗎？加入我們的 CS Connections 系列每月有機會與其他客戶交流，一起討論貴組織的熱門話題。 <p>**10 月 10 日上午 7:00 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,gw8sK1IYp0qugO85lvn9HA,1hAkk731fE2cuzI1JCe2Aw,Lox5X4bDSUC_HaF3SDUy7A?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _透過使用者管理推動採用_ - 您是否已開始使用 Workfront，並希望更熟悉與一般使用者相關的設定功能？加入客戶成功團隊，我們將查看報告和儀表板的實作範例，奠定成功的使用者管理基礎，並建立有用且資訊量豐富的一般使用者體驗。<p>**10 月 18 日上午 9:00 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,hKbbhANIJ0GUZ80-hyYRPQ,eHZZsesEKEW-f54PGw4z9w,lJV3sMGDTE2CpLxcuzZQXg,KGHthDBZ80q9JJ-wzHyqBQ,mY-6BCClJkmc_bRvqGebtQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _採用系列：讓 Workfront 變得更有趣！_&#x200B;需要採用想法嗎？找我們就對了！我們的團隊經歷過使用者採用的高潮和低谷，專注於有趣的事物是成功的關鍵。我們將討論一些實用的內容，並提供充足的時間進行公開討論，以與其他客戶分享想法。<p>**10 月 20 日下午 12:30 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,0qiSuEYEcUSxTibSYXD-jA,8QGOKlkyJE25EiBggDF6Ng,WmVegsyV2E6ZDPSMCifdVw?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-
-{style="table-layout:auto"}
-
-請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)，以掌握即將舉辦的活動和過去集數的最新消息。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
@@ -499,7 +483,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL Portfolio]，[!UICONTROL 行銷活動] | (選擇加入 Beta 版功能) 新的「[!UICONTROL 網路支出條件約束]」選項可讓您為多網路產品組合中的特定廣告網路定義預算分配限制。該選項適用於具有每日、每周和每月支出策略的產品組合，且僅當「[!UICONTROL 啟用行銷活動最大支出目標 %]」選項未啟用時。當「[!UICONTROL 自動調整行銷活動預算限制]」選項選取時，條件約束會在為多個和最低行銷活動預算設定的值範圍內作用。<br><br>基本報告中的新網路條件約束報告會顯示所有指定的最小和最大搜尋引擎預算以及您的產品組合的實際支出 (成本)。<br><br>若要參與測試版計劃，請連絡您的客戶團隊。 |
+| [!UICONTROL 產品組合]，[!UICONTROL 行銷活動] | (選擇加入 Beta 版功能) 新的「[!UICONTROL 網路支出條件約束]」選項可讓您為多網路產品組合中的特定廣告網路定義預算分配限制。該選項適用於具有每日、每周和每月支出策略的產品組合，且僅當「[!UICONTROL 啟用行銷活動最大支出目標 %]」選項未啟用時。當「[!UICONTROL 自動調整行銷活動預算限制]」選項選取時，條件約束會在為多個和最低行銷活動預算設定的值範圍內作用。<br><br>基本報告中的新網路條件約束報告會顯示所有指定的最小和最大搜尋引擎預算以及您的產品組合的實際支出 (成本)。<br><br>若要參與測試版計劃，請連絡您的客戶團隊。 |
 | 行銷活動、Bulksheet、報告 | ([!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 以下支援現在可用於 [!DNL Microsoft Audience Network] 上的行銷活動：<ul><li>您現在可以在「[!UICONTROL 行銷活動]」檢視中使用 Bulksheet 建立、編輯和變更客群行銷活動的狀態 (行銷活動類型「[!UICONTROL 客群 (圖片)]」或「[!UICONTROL 客群 (摘要)]」)、廣告群組 (廣告群組類型「[!UICONTROL 客群]」) 和廣告 (創意類型「[!UICONTROL 回應式廣告]」)。</li><li>您現在可以在「[!UICONTROL 行銷活動]」檢視中，檢視現有客群行銷活動，以表格和趨勢圖表格式呈現成效資料。廣告層級的成效資料也可在報告和 Adobe Analytics 中使用 (適用於與 [!DNL Analytics] 整合的廣告商)。</li></ul>最佳化支援將在未來版本中提供。 |
 |  | ([!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 您現在可以在[!UICONTROL 行銷活動]檢視中使用 Bulksheet，在搜尋行銷活動中建立和管理多媒體廣告。廣告具有創意類型「[!UICONTROL 多媒體廣告]」。<br><br>您可以將含多媒體廣告的行銷活動包含在，含有任何支出策略的標準產品組合或混合產品組合中，[!UICONTROL 目標曝光比重]除外 (混合產品組合尚未支援)。<br><br>您現在可以在「[!UICONTROL 行銷活動]」檢視中，檢視現有客群行銷活動，以表格和趨勢圖表格式呈現成效資料。廣告層級的成效資料也可在報告和 [!DNL Analytics] 中使用 (適用於與 [!DNL Analytics] 整合的廣告商)。 |
 | [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶的 Beta 版功能) 發佈者曝光比重量度現在可作為下列行銷活動管理檢視和報告中的欄：<ul><li>行銷活動管理檢視：所有行銷活動實體檢視，[!UICONTROL 廣告]除外。<b>請注意：</b>無法從廣告網路取得廣告層級資料。</li><li>基本報告：除了[!UICONTROL 廣告變體]、[!UICONTROL 每小時行銷活動]和[!UICONTROL 網路條件約束]報告的所有報告。<b>請注意：</b>無法從廣告網路取得廣告層級資料。</li><li>專業報告：[!UICONTROL Adwords 和 Bing 客群目標]、[!UICONTROL 行銷活動每日曝光比重]和[!UICONTROL 關鍵字每日曝光比重]報告。</li></ul><b>請注意：</b>因為[!UICONTROL 行銷活動每日曝光比重]和[!UICONTROL 關鍵字每日曝光比重] 報告現在是多餘的，在未來版本將被刪除。如果您將這些報告類型用於排程報告、範本或試算表摘要，請轉換改用[!UICONTROL 行銷活動]和[!UICONTROL 關鍵字]報告。與此同時，一些現有量度在這些報告類型中重複。 |
