--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -1,15 +1,15 @@
 ---
 title: 發行說明 - 2024 年 1 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: January 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 0cea27bc-3908-4225-86b6-c7e3aad10a0c
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '6086'
-ht-degree: 100%
+source-wordcount: '5745'
+ht-degree: 99%
 
 ---
 
@@ -61,9 +61,9 @@ ht-degree: 100%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 活動
 
@@ -71,25 +71,7 @@ ht-degree: 100%
 
 +++即將推出的 Experience League 活動
 
-* **[!DNL EXPERIENCE PLATFORM]** |Experience League LIVE | _使用案例教戰手冊：自助使用範本部署簡易操作的使用案例_ | 了解使用案例教戰手冊如何在彈指間將您的行銷目標轉化為實施目標！| **太平洋時間 2 月 8 日上午 9:00** | [註冊](https://engage.adobe.com/ExpLeagueLive-240208.html)
-
-* **[!DNL WORKFRONT]** | 客戶研討會 | _Connect：產業圈 - 高等教育_ | 第一個產業圈將於 2024 年推出，這是一個非正式的圓桌討論會，旨在將高等教育中的 [!DNL Workfront] 管理員聚集在一起，建立聯繫，分享經驗、學習和最佳實務。| **太平洋時間 2 月 8 日上午 9:00** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,HXNYzHfgZEyqwzniykMx3A,PncbLSMUO0uljcEW9Br4Yw,MM54OINvfUGLghA2cPG1Rg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL ANALYTICS]** | 網路研討會 | _資料滴灌：行銷管道與歸因模式_ | 您知道客戶互動對轉換的影響嗎？來看我們的 Adob&#x200B;&#x200B;e 專家展示如何設定行銷管道，以及如何利用 Adob&#x200B;&#x200B;e Analytics 的 AI 來建立自訂歸因模型。| **2 月 8 日下午 01:00 (東部標準時間)** | [註冊](https://adobeevents.adobeconnect.com/e1smupitvxor/event/registration.html?campaign-id=ExL)
-
-* **[!DNL WORKFRONT]** | 社群活動 | _Workfront Collective_ | 與其他 Workfront 客戶一起參加我們每月的合力問題解決時間和成功分享會議！| **2 月 12 日上午 06:00 (太平洋標準時間)** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,Xn9a7-beEEy24cKL2PXNNg,7zi14AC4xkabCHqKTayiIA,IqLjAD7pD0iArKvVqEuvXg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL DATA COLLECTION]** | 網路研討會 | _資料流優先順序_ | 了解如何管理活動協調流程的資料流優先順序，以增強您的組織執行由資料驅動個人化的能力。| **2 月 13 日上午 09:30 (太平洋標準時間)** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,ARjQDHG3k02Eo-6lKFWC2g,VAiqxCIG6Eyfezx39qUWCQ,wz2PUDDYrkiC_tdIA9Fmjg,zxRtJEK2-EOEMRsAgHTASw,_oHPrghx30--nY9ZXaZoOQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL WORKFRONT]** | 客戶研討會 | _Admin 101: 讓您的使用者使用[!DNL Workfront]_ | 剛開始使用 [!DNL Workfront] 嗎？參加我們的新管理員每月聚會！本月，我們將討論使用者採用的最佳實務。| **太平洋時間 2 月 14 日上午 8:00** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,MDL_x5737EWfNcssbhAZ1A,5pHR-aY5vUuDZD_W7b413Q,6Q3YA7w40kC8sjrpjua41Q?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL EXPERIENCE PLATFORM]** | 網路研討會 | _展現策略領導力：高階主管支持人的力量_ | 掌握透過策略影響力有效實現組織目標的策略。本次會議旨在幫助高階主管尋求提升高階主管的支持力量。| **2 月 15 日上午 10:00 (太平洋標準時間)** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,ARjQDHG3k02Eo-6lKFWC2g,VAiqxCIG6Eyfezx39qUWCQ,GhrB9xJg0Ue2T4RaLzkJLw,B3p-ouZzS0iARXaZhi5IXA,WnJS96CGxkWMxRYwMJAa8A?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL EXPERIENCE PLATFORM]** | 網路研討會 | _精益團隊的優勢：展現簡化成功的能力_ | 了解產品整合如何簡化數位工作流程、提高團隊效率並擴展業務流程。了解改善精益團隊內部協作的技術，讓全體實現最大生產力。| **2 月 20 日上午 10:00 (太平洋標準時間)** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,ARjQDHG3k02Eo-6lKFWC2g,VAiqxCIG6Eyfezx39qUWCQ,lzo8X450K0WiX2CQ1QsnUg,6GQkKH8YT0GizXdcl-r83A,qfG_3T7YZE-rhyNf2XFx-g?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **[!DNL WORKFRONT]** | 問答時間 | _詢問客戶支援 - 常見版面配置範本和視圖問題的疑難排解_ | 加入 Workfront 客戶支援團隊的「詢問專家」類型會議，以了解關於版面配置範本和視圖的最佳實務和疑難排解技巧。| **2 月 22 日上午 09:00 (太平洋標準時間)** | [註冊](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,SHy3noeahk-cVr1c56xN3g,LabzJZ5I2ESS1IfzddF1Lw,rj5S03F0xUmcsyxTeJTtTg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-檢視更多[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html)。
+在Experience League上檢視所有[即將舉辦的活動](https://experienceleague.adobe.com/events/)或瀏覽[活動錄製](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html)。
 
 +++
 
@@ -115,7 +97,7 @@ ht-degree: 100%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 
 如需最新的發行說明，請參閱：
@@ -129,7 +111,7 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -139,13 +121,13 @@ ht-degree: 100%
 
 {style="table-layout:auto"}
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -632,7 +614,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
