--- a/c-legacy-releases/2024/03132024.md
+++ b/c-legacy-releases/2024/03132024.md
@@ -1,15 +1,15 @@
 ---
 title: 發行說明 - 2023 年 3 月
-description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解有關 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
+description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: March 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 62141f30-b6b4-4813-a819-35262ed8e0c1
-source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
 workflow-type: tm+mt
-source-wordcount: '5840'
-ht-degree: 100%
+source-wordcount: '5668'
+ht-degree: 99%
 
 ---
 
@@ -61,9 +61,9 @@ ht-degree: 100%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動和更新 {#events}
 
-了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
+了解 Experience League 上的精彩活動。 這裡是您向 Adobe 產品專家學習、與之互動或獲得解答的最佳場所！
 
 ### Experience League 活動
 
@@ -71,13 +71,7 @@ ht-degree: 100%
 
 +++詳細資訊
 
-* **WORKFRONT** | 客戶研討會 | _學習：Adobe Workfront 中的 10 個文字模式提示_ | 想透過文字模式擴展您的報告知識嗎？別再猶豫了！本研討會將簡要介紹文字模式基本知識和 API Explorer，然後介紹 Adob&#x200B;&#x200B;e Workfront 中的 10 個文字模式提示。| **4 月 18 日上午 9:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,--xUIfX6gEqCcuYNDuE5IA,S8LJKpyI4kywiEO88_bvdg,Z6HaWjLNV0CaMzwT0JeWQg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **WORKFRONT** | 社區活動 | _交流：Workfront Collective_ | 與您的 Workfront 系統管理員同事一起參加每月一次的集體腦力激盪和分享會議，我們將在會議上討論最新的更新和最佳實務。| **4 月 22 日上午 06:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,PLjes69h2kitBUQrGr_tSQ,9hwaemfUG0uEqL-RwJW9fQ,OzGfEfueq0yp19zAhpjfwA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-* **WORKFRONT** | 問答聊天 | _詢問：移轉至 Adob&#x200B;&#x200B;e Business Platform_ | 參加由我們技術支援工程師進行的問答時間，了解會發生什麼以及如何為 Adob&#x200B;&#x200B;e Business Platform 移轉做好最佳準備。| **4 月 23 日上午 08:00 (太平洋時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,wXdzewqwQEO_SiY5SC4i2Q,r3bZVp0PVkObL30IXUw5iA,1p0c3CZ2qEGQBAZpsDvvEw?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
-
-檢視更多[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽 Experience League 上的[活動錄影](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
+在Experience League上檢視所有[即將舉辦的活動](https://experienceleague.adobe.com/events/)或瀏覽[活動錄製](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
 
 +++
 
@@ -117,7 +111,7 @@ ht-degree: 100%
 
 +++詳細資訊
 
-[!DNL Adobe System Status] 會提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。獲得有關服務中斷、作業中斷和維護事件的通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
+[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 如需最新的發行說明，請參閱：
 
@@ -131,7 +125,7 @@ ht-degree: 100%
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Experience Cloud] - 統一介面與管理 {#ecloud}
 
-了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
@@ -142,13 +136,13 @@ ht-degree: 100%
 * 現在，您可以在檢視或修改憑證時按名稱搜尋 API 憑證。
 * 現在，在角色標籤中檢視使用者的角色清單時，可以取得每個角色的使用者群組會籍資訊。對於僅透過使用者群組獲派角色的使用者，停用&#x200B;**[!UICONTROL 刪除角色]**&#x200B;選項。
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
+如需有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。查看 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -227,7 +221,7 @@ ht-degree: 100%
 
 {style="table-layout:auto"}
 
-### 新增 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
+### 新的 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
 
 [!DNL Analytics] 的新文章和現有文章的更新。
 
@@ -461,7 +455,6 @@ _已知問題_
 | 2024 年 2 月 | Experience Manager Assets | [用於 PIM 整合的 AEM Assets 事件](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/aem-eventing/examples/assets-pim-integration.html?lang=zh-Hant) | 影片 | 了解如何將 AEM Assets 與第三方系統 (例如產品資訊管理 (PIM) 或產品線管理 (PLM) 系統) 整合，以使用原生 AEM IO 事件更新資產中繼資料。 |
 | 2024 年 2 月 | AEM Headless | [自訂欄位](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/developing/extensibility/ui/content-fragments/examples/editor-custom-field.html?lang=zh-Hant) | 影片 | 了解如何在 AEM 內容片段編輯器中建立自訂欄位。 |
 | 2024 年 2 月 | Experience Manager、AEM Cloud Manager、Marketo Engage | [AEM 達人秘訣與技巧 - 在 Cloud Manager 中使用記錄](https://experienceleague.adobe.com/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/cloud-manager-using-logs.html?lang=zh-Hant) | 影片 | 看看您的 AEM 達人 Rami EL Gamal 分享的這些秘訣。在本影片中，Rami 將引導您了解如何在 Cloud Manager 中下載記錄，同時分享最佳實務技巧。 |
-| 2024 年 2 月 | AEM CS | [Cloud 5 - 真實使用者監控 (RUM)](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-rum.html?lang=zh-Hant) | 影片 | 探索 Adobe 透過 Edge Delivery Services 為其 AEM 網站提供的真實使用者監控 (RUM) 分析，以及如何使用 RUM 來改善網站。 |
 | 2024 年 2 月 | Experience Manager Forms | [使用來自核心元件型表單提交的資料產生 PDF](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/document-services/generate-pdf-from-core-component-form-submission.html?lang=zh-Hant) | 影片 | 將來自核心元件型表單提交的資料與工作流程中的 XDP 範本合併。 |
 | 2024 年 2 月 | AEM Cloud Manager | [AEM 達人最佳實務與秘訣 - 準備和規劃至 AEM as a Cloud Service 的移轉](https://experienceleague.adobe.com/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/migration.html?lang=zh-Hant) | 影片 | 探索 AEM 達人 Wilson Faure 分享的專家建議和最佳實務。在本影片中，他介紹了為準備和規劃移轉到 AEM as a Cloud Service 的複雜作業。 |
 | 2024 年 2 月 | Experience Manager Sites | [Cloud 5 - Edge 工作者](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-edge-workers.html?lang=zh-Hant) | 影片 | 探索 AEM Sites 和 Edge Delivery Services 中 Edge Workders 的重要性以及如何將其與後端系統整合。 |
@@ -618,7 +611,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) [!DNL Journey Optimizer] {#journey-opt}
 
-了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上查看最新的教學課程和知識庫支援文章。
+了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
