Updated by task 'AUTO_TM_MT_1743179855219'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/801f927f94bd2de8a046d803e086f9d0a04c03a2

--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -6,9 +6,9 @@ last-update: September 2022
 author: mfrei
 mini-toc-levels: 2
 exl-id: d195f05f-454f-4ef0-ba30-0453868fe426
-source-git-commit: 19fa5a41a984c3f68691674fe3524930925325a1
+source-git-commit: 801f927f94bd2de8a046d803e086f9d0a04c03a2
 workflow-type: tm+mt
-source-wordcount: '5038'
+source-wordcount: '4372'
 ht-degree: 98%
 
 ---
@@ -25,7 +25,6 @@ ht-degree: 98%
 
 上次更新日期：**2022 年 9 月 19 日**
 
-* [[!DNL Experience League] 活動](#events) (更新日期：**9 月 19 日**)
 * [[!DNL Adobe System Status]](#status)
 * [Experience Cloud - 中央介面元件和管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -47,31 +46,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
-
-## ![圖示](/assets/experience-league.png) [!DNL Experience League] 活動 {#events}
-
-若要向 Adobe 產品專家學習、與之互動或獲得解答，Experience League 活動是您絕佳的選擇！請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)，以掌握 2022 年 7 月活動的最新消息。
-
-更新日期：**2022 年 9 月 19 日**
-
-| 產品/事件名稱 | 類型 | 說明 |
-| -----------|---------- | ----|
-| **Experience League 展示** | 競賽 | 告訴 Adobe 您如何整合 Experience Cloud 產品以建立創新和個人化的客戶體驗。提交您的故事並獲得 Adobe 的認可！**9 月 9 日至 29 日接受報名** - [詳細資料](https://experienceleaguecommunities.adobe.com/t5/experience-league-showcase-2022/con-p/exl-showcase-2022?sdid=3NQZB6J7&amp;mv=email) |
-| **[!DNL Adobe Workfront]** | 工作坊 | 圖表工作流程 - 加入客戶成功團隊，即時討論和逐步說明圖表工作流程 (從接收到完成)，並了解如何為有效的工作管理實踐奠定堅實的基礎。 <p>**9 月 20 日** - [詳細資料和報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,hKbbhANIJ0GUZ80-hyYRPQ,eHZZsesEKEW-f54PGw4z9w,8IgA8CD5yEyKFei9pwlDJA,iACjdG_hK0m1uoTTaMinZA,TEaHrWBF3USQb49XCqymTg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 網路研討會 | _System Admin Essentials：資源管理快速入門_ - 使用 Adobe [!DNL Workfront] 管理您的資源是非常理想的選擇 - 您可了解需要完成的工作、可存取哪些資源，並根據它們的可用性進行指派。加入我們以了解如何進行。<p>**9 月 21 日上午 8:00 (英國時間)** - [詳細資料和報名](https://webinars.on24.com/adobe_workfront/AdminEssentialsRM?partnerref=exl) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _價值實現系列：使用專案範本的理由_ - 加入我們，討論[!UICONTROL 專案範本]及其為組織增加價值和提升效率的各種方式。我們集思廣益，用各種方法 (按活動、按可交付成果等) 來建構範本以支援您的專案。我們會示範一些我的最愛資料夾，並瀏覽我們最新的藍圖。 <p>**9 月 21 日下午 12:30 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,fir0yEdzREq77VYkVxk2kw,W3nJ9w4q-U69PVqUTk7D6Q,zs6GtWtgRkyikfMUMzBEmw?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _讓您和您的使用者按照計劃進行的 10 個溝通技巧_ - 有效的溝通是您、您的使用者，和最終達成公司成功非常重要的一環。本次工作坊提供了十個技巧 (無論是在 [!DNL Workfront] 中還是之外)，以幫助提高績效、生產力並降低不必要的問題風險。 <p>**9 月 22 日下午 7:00 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,Jcg3aU0zf0uG9pB-_vmCUg,pdnZcB-mqk2_nMKUQEQnsA,xYRXQWa6OU6_tvNTp_vuFQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Campaign Classic]** 和 **[!DNL Adobe Campaign Standard]** | 工作坊 | _社群問答時間_ - 針對 [!DNL Adobe Campaign] 測試人員網路研討會&#x200B;_假期和旺季期間成功清單_&#x200B;中討論的主題，與 Tamara Wulf 和 Earl Ross 一起討論您的疑問。 <p>**9 月 22 日下午 8:00 (北美山區時區)** - [詳細資料與報名](https://adobe.ly/3KHrGpl) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _使用儀表板推動採用：規劃師_ - 加入客戶成功團隊，我們將繼續根據 [!DNL Adobe Workfront] 角色探討新儀表板系列。本次研討會討論的重點在於經常擔任專案或行動方案管理角色的規劃師。了解如何為活動意識和責任建立一個積極主動、以團隊為主的空間。 <p>**9 月 27 日上午 9:00 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,hKbbhANIJ0GUZ80-hyYRPQ,eHZZsesEKEW-f54PGw4z9w,Y1He1usOwUaIvlln-RiUCw,PbQY6cwRBkiHr0Uxk8YBow,2QMMEWx0e0C65kbQ1d4cIA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _價值實現系列：為您的 Workfront 歷程制定藍圖_ - Workfront 歷程的下一步是什麼？加入我們，討論如何在您的組織中為 Adobe Workfront 建立自己的藍圖。我們將分享一些我們最喜歡的里程碑，您可以將其新增到您的藍圖中，我們還會分享作為前系統管理員的經驗。<p>**10 月 4 日下午 12:30 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,Bx3LyyABjkC6f0LfiHlHgw,F_Tenijn5UulPjqprok8eg,7lni6LpvlEWagR1OIDfosA?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _CS Connections：分享策略最佳實務_ - 正在尋找與其他客戶聯繫並討論 Workfront 功能的機會嗎？加入我們的 CS Connections 系列每月有機會與其他客戶交流，一起討論貴組織的熱門話題。 我們將與系統管理員一起集思廣益，以解決挑戰、分享想法並討論最佳實務。 <p>**日期：** 10 月 10 日上午 7:00 (北美山區時區) [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,gw8sK1IYp0qugO85lvn9HA,1hAkk731fE2cuzI1JCe2Aw,Lox5X4bDSUC_HaF3SDUy7A?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _透過使用者管理推動採用_ - 您是否已開始使用 Workfront，並希望更熟悉與一般使用者相關的設定功能？加入客戶成功團隊，我們將查看報告和儀表板的實作範例，奠定成功的使用者管理基礎，並建立有用且資訊量豐富的一般使用者體驗。<p>**10 月 18 日上午 9:00 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,hKbbhANIJ0GUZ80-hyYRPQ,eHZZsesEKEW-f54PGw4z9w,lJV3sMGDTE2CpLxcuzZQXg,KGHthDBZ80q9JJ-wzHyqBQ,mY-6BCClJkmc_bRvqGebtQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-| **[!DNL Adobe Workfront]** | 工作坊 | _採用系列：讓 Workfront 變得更有趣！_&#x200B;需要採用想法嗎？找我們就對了！我們的團隊經歷過使用者採用的高潮和低谷，專注於有趣的事物是成功的關鍵。我們將討論一些實用的內容，並提供充足的時間進行公開討論，以與其他客戶分享想法。<p>**10 月 20 日下午 12:30 (北美山區時區)** - [詳細資料與報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,0qiSuEYEcUSxTibSYXD-jA,8QGOKlkyJE25EiBggDF6Ng,WmVegsyV2E6ZDPSMCifdVw?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1) |
-
-{style="table-layout:auto"}
-
-請查看 Experience League 上的[活動](https://experienceleague.adobe.com/events/)，以掌握即將舉辦的活動和過去集數的最新消息。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/system-status.png) [!DNL Adobe System Status] {#status}
 
