Updated by task 'FY25_April_DX_RNs_HO1'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/881e871f088d74cd2befe2a528b62cafe18a3bf6

--- a/c-legacy-releases/2025/03122025.md
+++ b/c-legacy-releases/2025/03122025.md
@@ -5,10 +5,11 @@ doc-type: release notes
 last-update: March 2025
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 4139f3fb35a3a8ad81b90800c2f9870e02b4ea56
-workflow-type: tm+mt
+exl-id: 3825e892-6abc-47a8-a483-b98345f99108
+source-git-commit: fc1f86ff9001f1fcb464dd47e1607c68d08b523f
+workflow-type: ht
 source-wordcount: '3697'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -108,7 +109,7 @@ ht-degree: 99%
 
 ## [!DNL Experience Platform] {#platform}
 
-尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
+尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新版本資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
 +++詳細資訊
 
@@ -162,7 +163,7 @@ ht-degree: 99%
 
 ## [!DNL Analytics] {#analytics}
 
-尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新版本資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -180,7 +181,7 @@ ht-degree: 99%
 
 ## [!DNL Customer Journey Analytics] {#cja}
 
-尋找 [!DNL Customer Journey Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Customer Journey Analytics] 的最新版本資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -202,7 +203,7 @@ ht-degree: 99%
 
 ## [!DNL Streaming Media Analytics] {#sma}
 
-尋找 [!DNL Streaming Media Analytics] 的最新發行資訊。檢視 Experience League 上的全新教學課程。
+尋找 [!DNL Streaming Media Analytics] 的最新版本資訊。檢視 Experience League 上的全新教學課程。
 
 +++詳細資訊
 
@@ -218,7 +219,7 @@ ht-degree: 99%
 
 +++詳細資訊
 
-### Experience Manager 發行資訊
+### Experience Manager 版本資訊
 
 最新[!DNL Experience Manager as a Cloud Service]維護版本：**2025 年 3 月 4 日**
 
@@ -241,7 +242,7 @@ ht-degree: 99%
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
-| 2025 年 3 月 | [!DNL Experience Manager as a Cloud Service] | [實施無管道 URL 重新導向](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/foundation/administration/implementing-pipeline-free-url-redirects) | 新影片 | 了解如何在 [!DNL AEM as a Cloud Service] 中實施無管道 URL 重新導向，使行銷團隊無需開發人員即可管理重新導向。 |
+| 2025 年 3 月 | [!DNL Experience Manager as a Cloud Service] | [實作無管道 URL 重新導向](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/foundation/administration/implementing-pipeline-free-url-redirects) | 新影片 | 了解如何在 [!DNL AEM as a Cloud Service] 中實作無管道 URL 重新導向，使行銷團隊無需開發人員即可管理重新導向。 |
 | 2025 年 3 月 | [!DNL Experience Manager Sites] | [AEM 事件](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/aem-eventing/overview) | 新影片 | 了解 AEM 事件的定義及其使用原因、使用時機，以及相關範例。 |
 | 2025 年 3 月 | [!DNL AEM Headless as a Cloud Service] | [Next.js 應用程式](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/example-apps/next-js) | 新影片 | 應用程式範例是探索 Adobe [!DNL Experience Manager] (AEM) Headless 功能的絕佳方法。此 `Next.js` 應用程式展示如何透過 AEM GraphQL API 使用持續性查詢來查詢內容。 |
 | 2025 年 3 月 | [!DNL Experience Manager Sites] | [建置具有多個選項的區塊](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/sites/edge-delivery-services/developing/universal-editor/how-to/block-options) | 新影片 | 了解如何建置具有多個顯示選項的區塊。 |
@@ -286,7 +287,7 @@ ht-degree: 99%
 +++詳細資訊
 
 * 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
-* 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務發行資訊和文件。
+* 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
 <!-- ### New tutorials for [!DNL Adobe Commerce] {#tutorials-commerce}
@@ -372,7 +373,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 ## [!DNL Journey Optimizer] {#journey-opt}
 
-了解 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
+了解 [!DNL Journey Optimizer] 的最新版本資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
 +++詳細資訊
 
@@ -436,7 +437,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2025 年 3 月 | [實施即時聊天功能的最佳實務](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/dynamic-chat/live-chat-best-practices) | 新影片 | 了解在 Dynamic Chat 中實施即時聊天功能時應遵循的最佳實務。 |
+| 2025 年 3 月 | [實作即時聊天功能的最佳實務](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/dynamic-chat/live-chat-best-practices) | 新影片 | 了解在 Dynamic Chat 中實作即時聊天功能時應遵循的最佳實務。 |
 
 如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/home)首頁
 
@@ -462,9 +463,9 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 最新版本：
 
-* [2025年第二季版本總覽](https://experienceleague.adobe.com/en/docs/workfront/using/product-announcements/product-releases/release-25-q2/25-q2-release-overview)
+* [2025 年第二季版本概觀](https://experienceleague.adobe.com/zh-hant/docs/workfront/using/product-announcements/product-releases/release-25-q2/25-q2-release-overview)
 
-如需所有發行資訊：
+關於所有版本資訊：
 
 * 請參閱「[Adobe  [!DNL Workfront]  產品發行](https://experienceleague.adobe.com/zh-hant/docs/workfront/using/product-announcements/product-releases/product-releases)」頁面，以了解 [!DNL Workfront] 發行排程資訊與發行說明。
 
@@ -510,7 +511,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ## GenStudio for Performance Marketing {#genstudio-marketing}
 
-尋找 [!DNL GenStudio for Performance Marketing] 的最新發行資訊和新文件。
+尋找 [!DNL GenStudio for Performance Marketing] 的最新版本資訊和新文件。
 
 +++詳細資訊
 
@@ -607,7 +608,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ## 數位體驗藍圖 {#blueprints}
 
-[數位體驗藍圖](https://experienceleague.adobe.com/zh-hant/docs/blueprints-learn/architecture/overview)是可重複的實施，可讓您處理策略，並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實施步驟、技術考量以及相關文件的連結。
+[數位體驗藍圖](https://experienceleague.adobe.com/zh-hant/docs/blueprints-learn/architecture/overview)是可重複的實作，可讓您處理策略，並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實作步驟、技術考量以及相關文件的連結。
 
 <!-- |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
@@ -628,4 +629,3 @@ The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/
 And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
-
